--- a/app/.env.example
+++ b/app/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Discord Webhook Manager"
+APP_NAME=WebhookManager
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=discord_webhook_manager
-DB_USERNAME=root
-DB_PASSWORD=1234
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -47,10 +47,10 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=mailjet
+MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_PORT=null
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="noreply@yourdomain.com"
