--- a/app/.env.example
+++ b/app/.env.example
@@ -27,17 +27,18 @@ DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
+SESSION_STORE=redis
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -46,6 +47,8 @@ REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CACHE_CONNECTION=cache
+REDIS_QUEUE_CONNECTION=default
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
