feature: analytics con matomo

--- a/app/.env.example
+++ b/app/.env.example
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Matomo Tag Manager - Analytics (Optional)
+# Uncomment and set your Matomo container URL to enable analytics tracking
+# Format: https://your-matomo-instance.com/js/container_XXXXXX.js
+# VITE_MATOMO_CONTAINER_URL=
